syntax = "proto3";

package pb.order;

option go_package = "github.com/MamangRust/simple_microservice_ecommerce_pb/order";

import "api.proto";
import "order/common.proto";

message FindAllOrderRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
}

message ApiResponsePaginationOrderDeleteAt {
  string status = 1;
  string message = 2;
  repeated pb.order.OrderResponseDeleteAt data = 3;
  pb.Pagination pagination = 4;
}

message ApiResponsePaginationOrder {
  string status = 1;
  string message = 2;
  repeated pb.order.OrderResponse data = 3;
  pb.Pagination pagination = 4;
}

service OrderQueryService {
  rpc FindAll(FindAllOrderRequest) returns (ApiResponsePaginationOrder);
  rpc FindById(pb.order.FindByIdOrderRequest)
      returns (pb.order.ApiResponseOrder);

  rpc FindByActive(FindAllOrderRequest)
      returns (ApiResponsePaginationOrderDeleteAt);
  rpc FindByTrashed(FindAllOrderRequest)
      returns (ApiResponsePaginationOrderDeleteAt);
}